# simpleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md
cmake/modules/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake  FindSTB_IMAGE.cmake
res/: astargrid.txt  defaultPerspective.frag  defaultPerspective.vert  imageRender.frag  imageRender.vert  test.frag  test.vert
res/meshes/: BladeTexture.pdn  blade.blend  blade.mtl  blade_thinner.mtl  ground.mtl  trumpet2.mtl
src/: CMakeLists.txt
src/astar/: CMakeLists.txt  astar.cpp  grid.cpp  grid.hpp  node.cpp  node.hpp
src/mains/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  mains.hpp
src/math/: CMakeLists.txt  constants.hpp  math.hpp  matrix4x4.cpp  matrix4x4.hpp  vector4.cpp  vector4.hpp
src/objects/: CMakeLists.txt  buffercontainers.hpp  bufferobject.hpp  cuboid.cpp  cuboid.hpp  face.cpp  face.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  primitive3d.cpp  primitive3d.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/raytracer/: CMakeLists.txt  raytracer.cpp
src/render_base/: CMakeLists.txt  camera.cpp  camera.hpp  color.cpp  color.hpp  context3d.cpp  context3d.cppa  context3d.hpp  exception.cpp  exception.hpp  keycodes.hpp  shader.cpp  shader.hpp  shadermanager.cpp  shadermanager.hpp  shadervariable.cpp  shadervariable.hpp  shadervariableblock.cpp  shadervariableblock.hpp  texture.cpp  texture.hpp  texturebuffer.cpp  texturebuffer.hpp  texturemanager.cpp  texturemanager.hpp  uniformbuffermanager.cpp  uniformbuffermanager.hpp  window.cpp  window.hpp
src/utilities/: CMakeLists.txt  alwaysfalse.hpp  exception.cpp  scopeguard.hpp
